# kommod

./: .codeclimate.yml  .gitignore  .gitmodules  .pnp.cjs  .prettierrc.json  LICENSE  README.md  REQUIREMENTS.md  package-lock.json  package.json  tsconfig.json
.erb/dll/: renderer.dev.dll.js  renderer.json
.github/workflows/: build.yml  codeqg.yml  test-and-package.yml  test-and-release.yml  test-release-upload.yml  test.yml  tests.yml  upload-artifacts.yml  upload.yml
ci/: attachBinariesToRelease.mjs
public/: index.html
release/app/: package-lock.json  package.json
scripts/: attachBinariesToRelease.mjs
src/: App.css  App.test.tsx  App.tsx  Footer.test.tsx  Footer.tsx  Header.test.tsx  Header.tsx  MainScreen.test.tsx  MainScreen.tsx  Navigation.test.tsx  Navigation.tsx  config.ts  helpers.ts  index.tsx  mocks.ts  setupTests.ts  store.ts  testUtils.tsx  themes.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/__tests__/: App.test.tsx  Settings.test.tsx
src/components/: CreateEntry.css  CreateEntry.test.tsx  CreateEntry.tsx  DaySelector.css  DaySelector.test.tsx  DaySelector.tsx  LocalStorage.ts  LocalStorageFactory.ts  ProjectSelector.test.tsx  ProjectSelector.tsx  Settings.test.tsx  Settings.tsx  SingleDayTimeEntryList.test.tsx  SingleDayTimeEntryList.tsx  Storage.ts  StorageFactory.ts  TaskSelector.test.tsx  TaskSelector.tsx  TimeEntryList.css  TimeEntryList.test.tsx  TimeEntryList.tsx
src/layout/: BaseLayout.test.tsx  BaseLayout.tsx  Error.test.tsx  Error.tsx  Grid.test.tsx  Grid.tsx  SkeletonLoading.tsx  (+1 more)
(+53 files in other folders)
